fix: Proper spacing on home

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -17,9 +17,9 @@
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: flex-start;
-	height: 100%;
 	padding-top: 1.25rem;
 	width: 100%;
+  margin: auto;
 }
 
 @media screen and (max-width: 768px) {
